Re-enable new private subnets

--- a/stacks/vpc-v2.yml
+++ b/stacks/vpc-v2.yml
@@ -127,26 +127,26 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Sub ${TemplateUrlPrefix}/public-subnets.yml
       TimeoutInMinutes: 5
-  # PrivateSubnetsStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   DependsOn: IPv6VpcCidrBlock
-  #   Properties:
-  #     NotificationARNs:
-  #       - !Ref CloudFormationNotificationArn
-  #     Parameters:
-  #       EnvironmentType: !Ref EnvironmentType
-  #       VpcId: !Ref Vpc
-  #       VpcCidrBlock: !GetAtt Vpc.CidrBlock
-  #       VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub ${TemplateUrlPrefix}/private-subnets.yml
-  #     TimeoutInMinutes: 5
+  PrivateSubnetsStack:
+    Type: AWS::CloudFormation::Stack
+    DependsOn: IPv6VpcCidrBlock
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        VpcId: !Ref Vpc
+        VpcCidrBlock: !GetAtt Vpc.CidrBlock
+        VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
+      Tags:
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub ${TemplateUrlPrefix}/private-subnets.yml
+      TimeoutInMinutes: 5
 
   # Network ACLs
   PublicNetworkAclStack:
@@ -202,21 +202,21 @@ Resources:
       NetworkAclId: !GetAtt PublicNetworkAclStack.Outputs.NetworkAclName
 
   # Private subnet network ACL associations
-  # PrivateSubnet1NetworkAclAssociation:
-  #   Type: AWS::EC2::SubnetNetworkAclAssociation
-  #   Properties:
-  #     SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
-  #     NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
-  # PrivateSubnet2NetworkAclAssociation:
-  #   Type: AWS::EC2::SubnetNetworkAclAssociation
-  #   Properties:
-  #     SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
-  #     NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
-  # PrivateSubnet3NetworkAclAssociation:
-  # Type: AWS::EC2::SubnetNetworkAclAssociation
-  # Properties:
-  #   SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
-  #   NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+  PrivateSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
+      NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+  PrivateSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
+      NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
+  PrivateSubnet3NetworkAclAssociation:
+  Type: AWS::EC2::SubnetNetworkAclAssociation
+  Properties:
+    SubnetId: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
+    NetworkAclId: !GetAtt PrivateNetworkAclStack.Outputs.NetworkAclName
 
   # AWS PrivateLink and VPC endpoints
   InterfaceEndpointsStack:
@@ -281,21 +281,21 @@ Outputs:
     Description: AZ of public subnet 3
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet3AZ
 
-  # PrivateSubnet1Id:
-  #   Description: ID of private subnet 1
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
-  # PrivateSubnet1AZ:
-  #   Description: AZ of private subnet 2
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1AZ
-  # PrivateSubnet2Id:
-  #   Description: ID of private subnet 2
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
-  # PrivateSubnet2AZ:
-  #   Description: AZ of private subnet 2
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2AZ
-  # PrivateSubnet3Id:
-  #   Description: ID of private subnet 3
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
-  # PrivateSubnet3AZ:
-  #   Description: AZ of private subnet 1
-  #   Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
+  PrivateSubnet1Id:
+    Description: ID of private subnet 1
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
+  PrivateSubnet1AZ:
+    Description: AZ of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1AZ
+  PrivateSubnet2Id:
+    Description: ID of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
+  PrivateSubnet2AZ:
+    Description: AZ of private subnet 2
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2AZ
+  PrivateSubnet3Id:
+    Description: ID of private subnet 3
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
+  PrivateSubnet3AZ:
+    Description: AZ of private subnet 1
+    Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
