Remove iframely target group name

--- a/stacks/container-apps/iframely.prx.org.yml
+++ b/stacks/container-apps/iframely.prx.org.yml
@@ -81,7 +81,6 @@ Resources:
       HealthyThresholdCount: 3
       UnhealthyThresholdCount: 3
       HealthCheckPath: /s/css/bootstrap.css
-      Name: !Sub ${AppName}-${EnvironmentTypeAbbreviation}
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
@@ -94,9 +93,9 @@ Resources:
           Value: !Ref EnvironmentType
         - Key: Name
           Value: !Sub ${AppName}-${EnvironmentType}
-        - Key: "prx:cloudformation:stack-name"
+        - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
-        - Key: "prx:cloudformation:stack-id"
+        - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       VpcId: !Ref VPC
   # ALB Listener Rules
