--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -265,37 +265,37 @@ Outputs:
   PublicSubnet1Id:
     Description: ID of public subnet 1
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
-  PublicSubnet1AZ:
+  PublicSubnet1Az:
     Description: AZ of public subnet 1
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet1AZ
   PublicSubnet2Id:
     Description: ID of public subnet 2
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
-  PublicSubnet2AZ:
+  PublicSubnet2Az:
     Description: AZ of public subnet 2
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet2AZ
   PublicSubnet3Id:
     Description: ID of public subnet 3
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet3Id
-  PublicSubnet3AZ:
+  PublicSubnet3Az:
     Description: AZ of public subnet 3
     Value: !GetAtt PublicSubnetsStack.Outputs.Subnet3AZ
 
   PrivateSubnet1Id:
     Description: ID of private subnet 1
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
-  PrivateSubnet1AZ:
+  PrivateSubnet1Az:
     Description: AZ of private subnet 2
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet1AZ
   PrivateSubnet2Id:
     Description: ID of private subnet 2
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
-  PrivateSubnet2AZ:
+  PrivateSubnet2Az:
     Description: AZ of private subnet 2
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet2AZ
   PrivateSubnet3Id:
     Description: ID of private subnet 3
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
-  PrivateSubnet3AZ:
+  PrivateSubnet3Az:
     Description: AZ of private subnet 1
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
