Fix environment abbreviation

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -803,7 +803,7 @@ Resources:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
