Turn off ALB listeners

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -243,34 +243,34 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
-  HttpListener:
-    # Generally all HTTP traffic is redirected to HTTPS
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      DefaultActions:
-        - RedirectConfig:
-            Host: "#{host}"
-            Path: "/#{path}"
-            Port: "443"
-            Protocol: HTTPS
-            Query: "#{query}"
-            StatusCode: HTTP_301
-          Type: redirect
-      LoadBalancerArn: !Ref Alb
-      Port: 80
-      Protocol: HTTP
-  HttpsListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    Properties:
-      Certificates:
-        - CertificateArn: !Ref Certificate
-      DefaultActions:
-        - FixedResponseConfig:
-            StatusCode: "404"
-          Type: fixed-response
-      LoadBalancerArn: !Ref Alb
-      Port: 443
-      Protocol: HTTPS
+  # HttpListener:
+  #   # Generally all HTTP traffic is redirected to HTTPS
+  #   Type: AWS::ElasticLoadBalancingV2::Listener
+  #   Properties:
+  #     DefaultActions:
+  #       - RedirectConfig:
+  #           Host: "#{host}"
+  #           Path: "/#{path}"
+  #           Port: "443"
+  #           Protocol: HTTPS
+  #           Query: "#{query}"
+  #           StatusCode: HTTP_301
+  #         Type: redirect
+  #     LoadBalancerArn: !Ref Alb
+  #     Port: 80
+  #     Protocol: HTTP
+  # HttpsListener:
+  #   Type: AWS::ElasticLoadBalancingV2::Listener
+  #   Properties:
+  #     Certificates:
+  #       - CertificateArn: !Ref Certificate
+  #     DefaultActions:
+  #       - FixedResponseConfig:
+  #           StatusCode: "404"
+  #         Type: fixed-response
+  #     LoadBalancerArn: !Ref Alb
+  #     Port: 443
+  #     Protocol: HTTPS
 
   DefaultTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -324,6 +324,6 @@ Outputs:
       The ID of the Amazon Route 53 hosted zone associated with the load
       balancer. For example, Z2P70J7EXAMPLE
     Value: !GetAtt Alb.CanonicalHostedZoneID
-  HttpsListenerArn:
-    Description: The Amazon Resource Name (ARN) of the listener
-    Value: !Ref HttpsListener
+  # HttpsListenerArn:
+  #   Description: The Amazon Resource Name (ARN) of the listener
+  #   Value: !Ref HttpsListener
