Add shared ECS cluster

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -1,4 +1,4 @@
-# stacks/load-balancers.yml
+# stacks/shared-alb.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 # TODO Launching this is blocked by needing to manually add DNS records for
@@ -324,6 +324,6 @@ Outputs:
       The ID of the Amazon Route 53 hosted zone associated with the load
       balancer. For example, Z2P70J7EXAMPLE
     Value: !GetAtt Alb.CanonicalHostedZoneID
-  # HttpsListenerArn:
-  #   Description: The Amazon Resource Name (ARN) of the listener
-  #   Value: !Ref HttpsListener
+  HttpsListenerArn:
+    Description: The Amazon Resource Name (ARN) of the listener
+    Value: !Ref HttpsListener
