--- a/stacks/shared-ecs-cluster.yml
+++ b/stacks/shared-ecs-cluster.yml
@@ -31,3 +31,15 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
+
+Outputs:
+  EcsClusterName:
+    Description: >-
+      The resource name of the ECS cluster, such as
+      MyStack-MyCluster-NT5EUXTN176T
+    Value: !Ref EcsCluster
+  ECSClusterArn:
+    Description: >-
+      The Amazon Resource Name (ARN) of the Amazon ECS cluster, such as
+      arn:aws:ecs:us-east-2:123456789012:cluster/MyECSCluster
+    Value: !GetAtt EcsCluster.Arn
