Add basic ASG and capacity provider

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -846,9 +846,10 @@ Resources:
         # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         KeyPairName: !Ref AsgKeyPairName
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-        # VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
-        # VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
-        # VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
