Enable ASG scale in protection

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -127,7 +127,7 @@ Resources:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateData:
-        BlockDeviceMappings:
+        BlockDeviceMappings: # TODO
           - DeviceName: /dev/xvda
             Ebs:
               DeleteOnTermination: true
@@ -181,6 +181,7 @@ Resources:
         - IsProduction
         - "4"
         - "2"
+      NewInstancesProtectedFromScaleIn: true
       # NotificationConfigurations
       Tags:
         - Key: Project
