Add capacity provider association

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -226,15 +226,15 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
 
-  # ClusterCapacityProviderAssociation:
-  #   Type: AWS::ECS::ClusterCapacityProviderAssociations
-  #   Properties:
-  #     Cluster: !Ref EcsClusterName
-  #     CapacityProviders:
-  #       - !Ref DefaultCapacityProvider
-  #     DefaultCapacityProviderStrategy:
-  #       # With only one default capacity provider, the base and weight won't
-  #       # factor into scheduling; everything will be even within the ASG
-  #       - Base: 0
-  #         Weight: 0
-  #         CapacityProvider: !Ref DefaultCapacityProvider
+  ClusterCapacityProviderAssociation:
+    Type: AWS::ECS::ClusterCapacityProviderAssociations
+    Properties:
+      Cluster: !Ref EcsClusterName
+      CapacityProviders:
+        - !Ref DefaultCapacityProvider
+      DefaultCapacityProviderStrategy:
+        # With only one default capacity provider, the base and weight won't
+        # factor into scheduling; everything will be even within the ASG
+        - Base: 0
+          Weight: 0
+          CapacityProvider: !Ref DefaultCapacityProvider
