Add new temporary Metrics stack

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -38,12 +38,12 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
-        Version: "2012-10-17"
         Statement:
           - Action: sts:AssumeRole
             Effect: Allow
             Principal:
               Service: ec2.amazonaws.com
+        Version: "2012-10-17"
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
       Policies:
@@ -56,13 +56,13 @@ Resources:
             Version: "2012-10-17"
         - PolicyName: ModifyCreditSpecificationPolicy
           PolicyDocument:
-            Version: "2012-10-17"
             Statement:
               - Action:
                   - ec2:ModifyInstanceCreditSpecification
                   - ec2:DescribeInstanceCreditSpecifications
                 Effect: Allow
                 Resource: "*"
+            Version: "2012-10-17"
       Tags:
         - Key: Project
           Value: platform.prx.org
@@ -199,7 +199,7 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
           PropagateAtLaunch: true
-      # TerminationPolicies
+      # TODO TerminationPolicies
       VPCZoneIdentifier:
         - !Ref VpcPublicSubnet1Id
         - !Ref VpcPublicSubnet2Id
@@ -225,7 +225,6 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-
   ClusterCapacityProviderAssociation:
     Type: AWS::ECS::ClusterCapacityProviderAssociations
     Properties:
