--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -823,11 +823,6 @@ Resources:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-        # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        # VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-        # VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
-        # VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
-        # VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -856,6 +851,32 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/shared-ecs-asg.yml"]]
+      TimeoutInMinutes: 5
+
+  # Temp
+  MetricsV2Stack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        # VPC: !GetAtt VPCStack.Outputs.VPC
+        # PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
+        # PlatformALBFullName: !GetAtt LoadBalancersStack.Outputs.PlatformALBFullName
+        # PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+        # PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+        # PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
+        # ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        # OpsErrorMessagesSnsTopicArn:
+        #   Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        EnvironmentType: !Ref EnvironmentType
+        # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        # EcrRegion: !Ref EcrRegion
+        # SecretsBase:
+        #   Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
+        # MetricsEcrImageTag: !Ref MetricsEcrImageTag
+        # MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        # ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendMemory]
+        # ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendCpu]
+      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/metrics-v2.yml"]]
       TimeoutInMinutes: 5
 
 Outputs:
