Make new Metrics staging only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -856,6 +856,7 @@ Resources:
   # Temp
   MetricsV2Stack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
     Properties:
       Parameters:
         # VPC: !GetAtt VPCStack.Outputs.VPC
