--- a/stacks/shared-ecs-cluster.yml
+++ b/stacks/shared-ecs-cluster.yml
@@ -28,7 +28,7 @@ Outputs:
       The resource name of the ECS cluster, such as
       MyStack-MyCluster-NT5EUXTN176T
     Value: !Ref EcsCluster
-  ECSClusterArn:
+  EcsClusterArn:
     Description: >-
       The Amazon Resource Name (ARN) of the Amazon ECS cluster, such as
       arn:aws:ecs:us-east-2:123456789012:cluster/MyECSCluster
