Add missing parameter

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -12,6 +12,8 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   VpcId:
     Type: AWS::EC2::VPC::Id
   SecretsBase:
