--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -876,7 +876,7 @@ Resources:
         # OpsErrorMessagesSnsTopicArn:
         #   Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
-        # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         # EcrRegion: !Ref EcrRegion
         # SecretsBase:
         #   Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
