--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -859,6 +859,7 @@ Resources:
     Condition: IsStaging
     Properties:
       Parameters:
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         SecretsBase:
@@ -867,23 +868,8 @@ Resources:
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
-        # PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
-        # PlatformALBFullName: !GetAtt LoadBalancersStack.Outputs.PlatformALBFullName
-        # PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
-        # PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        # PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Metrics, prefix]
-        # ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-        # OpsErrorMessagesSnsTopicArn:
-        #   Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        # EcrRegion: !Ref EcrRegion
-        # SecretsBase:
-        #   Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
-        # MetricsEcrImageTag: !Ref MetricsEcrImageTag
-        # MetricsSecretsVersion: !Ref MetricsSecretsVersion
-        # ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendMemory]
-        # ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendCpu]
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/metrics-v2.yml"]]
       TimeoutInMinutes: 5
 
