Add service subnets

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -28,6 +28,12 @@ Parameters:
     Type: String
   SecretsStackName:
     Type: String
+  VpcPublicSubnet1Id:
+    Type: AWS::EC2::Subnet::Id
+  VpcPublicSubnet2Id:
+    Type: AWS::EC2::Subnet::Id
+  VpcPublicSubnet3Id:
+    Type: AWS::EC2::Subnet::Id
 
 Resources:
   TargetGroup:
@@ -111,6 +117,9 @@ Resources:
           AssignPublicIp: DISABLED
           SecurityGroups:
             - InboundWebTrafficSecurityGroup
+          Subnets:
+            - VpcPublicSubnet1Id
+            - VpcPublicSubnet2Id
       Tags:
         - Key: Project
           Value: Metrics # TODO
