Fix subnet references

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -118,8 +118,8 @@ Resources:
           SecurityGroups:
             - InboundWebTrafficSecurityGroup
           Subnets:
-            - VpcPublicSubnet1Id
-            - VpcPublicSubnet2Id
+            - !Ref VpcPublicSubnet1Id
+            - !Ref VpcPublicSubnet2Id
       Tags:
         - Key: Project
           Value: Metrics # TODO
