Fix SG reference

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -116,7 +116,7 @@ Resources:
         AwsvpcConfiguration:
           AssignPublicIp: DISABLED
           SecurityGroups:
-            - InboundWebTrafficSecurityGroup
+            - !Ref InboundWebTrafficSecurityGroup
           Subnets:
             - !Ref VpcPublicSubnet1Id
             - !Ref VpcPublicSubnet2Id
