Add S3 gateway endpoint

--- a/stacks/vpc/gateway-endpoints.yml
+++ b/stacks/vpc/gateway-endpoints.yml
@@ -7,17 +7,16 @@ Parameters:
     Type: AWS::EC2::VPC::Id
   PublicRouteTableId:
     Type: String
-  # PrivateRouteTableId:
-  #   Type: String
+  PrivateRouteTableId:
+    Type: String
 
 Resources:
-  Temp:
-    Type: AWS::SNS::Topic
-  # S3Endpoint:
-  #   Type: AWS::EC2::VPCEndpoint
-  #   Properties:
-  #     RouteTableIds:
-  #       - !Ref RouteTable
-  #     ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
-  #     VpcEndpointType: Gateway
-  #     VpcId: !Ref VpcId
+  S3Endpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      RouteTableIds:
+        - !Ref PublicRouteTableId
+        - !Ref PrivateRouteTableId
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
+      VpcEndpointType: Gateway
+      VpcId: !Ref VpcId
