Fix ICMP NACL entries

--- a/stacks/vpc/public-network-acl.yml
+++ b/stacks/vpc/public-network-acl.yml
@@ -119,14 +119,20 @@ Resources:
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: false
+      Icmp:
+        Code: -1
+        Type: 0 # Echo reply
       NetworkAclId: !Ref PublicNetworkAcl
       Protocol: 1 # ICMP
       RuleAction: allow
       RuleNumber: 150
-  InboundIpVIcmpNetworkAclEntry:
+  InboundIpV6IcmpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
+      Icmp:
+        Code: -1
+        Type: 0 # Echo reply
       Ipv6CidrBlock: ::/0
       NetworkAclId: !Ref PublicNetworkAcl
       Protocol: 1 # ICMP
@@ -147,7 +153,7 @@ Resources:
       Protocol: 17 # UDP
       RuleAction: allow
       RuleNumber: 160
-  InboundIpVNtpNetworkAclEntry:
+  InboundIpV6NtpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: false
@@ -254,14 +260,20 @@ Resources:
     Properties:
       CidrBlock: 0.0.0.0/0
       Egress: true
+      Icmp:
+        Code: -1
+        Type: 8 # Echo
       NetworkAclId: !Ref PublicNetworkAcl
       Protocol: 1 # ICMP
       RuleAction: allow
       RuleNumber: 150
-  OutboundIpVIcmpNetworkAclEntry:
+  OutboundIpV6IcmpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: true
+      Icmp:
+        Code: -1
+        Type: 8 # Echo
       Ipv6CidrBlock: ::/0
       NetworkAclId: !Ref PublicNetworkAcl
       Protocol: 1 # ICMP
@@ -282,7 +294,7 @@ Resources:
       Protocol: 17 # UDP
       RuleAction: allow
       RuleNumber: 160
-  OutboundIpVNtpNetworkAclEntry:
+  OutboundIpV6NtpNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       Egress: true
